--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -20,7 +20,13 @@
     "import numpy as np\n",
     "\n",
     "import pandas as pd\n",
-    "# from helpers_notebook import show_full_df"
+    "# from helpers_notebook import show_full_df\n",
+    "\n",
+    "# global settings\n",
+    "bin_size = 0.1\n",
+    "thresh_rate = 1 # firing rate in Hz\n",
+    "thresh_sw = 0.5 # spike width in ms\n",
+    "thresh_trials = 0.9 # number of trials in %"
    ]
   },
   {
@@ -28,7 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# within ALM"
+    "# example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## load data"
    ]
   },
   {
@@ -37,30 +50,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load example recording\n",
+    "# load recording as Recording object\n",
     "p_mat = './data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe1.mat'\n",
     "rec = Recording(p_mat)"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## select units based on trial ranges and rate"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select bin size and filter width \n",
-    "bin_size, filter_sigma = 0.1, 1\n",
+    "# get PSTH with defined `bin_size`, if possible load from disk\n",
     "p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
     "df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
-    "df = utl.smooth_psth(df, filter_sigma, bin_size)"
+    "df = utl.rate_and_time(df, bin_size)"
    ]
   },
   {
@@ -69,117 +73,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data for all units\n",
-    "utl.plot_missing(df, bin_size, vmax=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop unit one at a time\n",
-    "unts_range, trls_range = utl.filter_trial_ranges(rec, plot=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot binned spike rates\n",
-    "m = df.loc[:, 'unit'].isin(unts_range) & df.loc[:, 'trial'].isin(trls_range)\n",
-    "utl.plot_missing(df.loc[ m ], bin_size, vmax=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unts_rate = utl.filter_rates(df.loc[ m ], 2, plot=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u = unts_range & unts_rate\n",
-    "t = trls_range\n",
-    "m = (df.loc[:, 'unit'].isin(u) & df.loc[:, 'trial'].isin(t))\n",
-    "print(f'{len(u)} units and {len(t)} trials survived')\n",
+    "unit = 1 # plot example unit\n",
     "\n",
-    "rec.units = u\n",
-    "rec.trials = t\n",
+    "utl.plot_unit(df, rec, bin_size, unit=unit) # whole session\n",
     "\n",
-    "utl.plot_missing(df.loc[ m ], bin_size, vmax=5)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## visualize bin size and filter width"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unit = 1\n",
-    "\n",
-    "# whole session\n",
-    "utl.plot_unit(df, rec, bin_size, unit=unit)\n",
-    "\n",
-    "# zoomed in\n",
-    "xlims = (1000, 1100)\n",
+    "xlims = (1000, 1100) # zoomed in\n",
     "utl.plot_unit(df, rec, bin_size, unit=unit, xlims=xlims)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# visualize different bin sizes\n",
-    "bin_size, unit = .1, 1\n",
-    "filter_sigmas = [2, 1, .5, .1]\n",
-    "fig, ax = plt.subplots(figsize=(20, 5))\n",
-    "\n",
-    "# # trial start times\n",
-    "# for t0 in rec.df_trl.loc[:, 'T_0']:\n",
-    "#     ax.axvline(t0, c='gray', lw=.5)\n",
-    "\n",
-    "# plot different filter sigma\n",
-    "for filter_sigma in filter_sigmas:\n",
-    "    p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
-    "    df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
-    "    df = utl.smooth_psth(df, filter_sigma, bin_size)\n",
-    "\n",
-    "    d = df.groupby('unit').get_group(unit)\n",
-    "\n",
-    "    x = d.loc[:, 'bins_'].values * bin_size\n",
-    "    y = d.loc[:, 'fr'].values\n",
-    "\n",
-    "    ax.plot(x, y, label=f'{filter_sigma}')\n",
-    "\n",
-    "ax.margins(x=0)\n",
-    "ax.set_xlabel('time [s]')\n",
-    "ax.set_ylabel('firing rate [Hz]')\n",
-    "ax.legend(title='filter sigma [s]')\n",
-    "ax.set_xlim(xlims)\n",
-    "ax.set_title(f'unit {unit} | bin size {bin_size}')\n",
-    "\n",
-    "fig.tight_layout()"
+    "## filter units and trials"
    ]
   },
   {
@@ -188,74 +94,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualize different bin sizes\n",
-    "filter_sigma, unit = .00001, 1\n",
-    "bin_sizes = [.5, .1, .05]\n",
-    "fig, ax = plt.subplots(figsize=(20, 5))\n",
+    "# get units with rate > `thresh_rate` and spike width > `thresh_sw`\n",
+    "unts_rate = utl.filter_rates(df, thresh_rate)\n",
+    "unts_sw = utl.filter_spike_width(rec.df_unt, thresh_sw)\n",
     "\n",
-    "# # trial start times\n",
-    "# for t0 in rec.df_trl.loc[:, 'T_0']:\n",
-    "#     ax.axvline(t0, c='gray', lw=.5)\n",
+    "# drop unit one at a time\n",
+    "m = rec.df_unt.loc[:, 'unit'].isin(unts_rate & unts_sw)\n",
+    "unts_range, trls_range = utl.filter_trials(rec.df_unt.loc[m], thresh=thresh_trials, plot=False)\n",
     "\n",
-    "# plot different bin sizes\n",
-    "for bin_size in bin_sizes:\n",
-    "    p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
-    "    df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
-    "    df = utl.smooth_psth(df, filter_sigma, bin_size)\n",
+    "# only keep units/trials meeting all criteria\n",
+    "u = unts_rate & unts_sw & unts_range\n",
+    "t = trls_range\n",
+    "print(f'{len(u)} units and {len(t)} trials survived')\n",
+    "m = df.loc[:, 'unit'].isin(u) & df.loc[:, 'trial'].isin(t)\n",
+    "# utl.plot_missing(df.loc[m], bin_size, vmax=5)\n",
     "\n",
-    "    d = df.groupby('unit').get_group(unit)\n",
-    "\n",
-    "    x = d.loc[:, 'bins_'].values * bin_size\n",
-    "    y = d.loc[:, 'fr'].values\n",
-    "\n",
-    "    ax.plot(x, y, label=f'{bin_size}')\n",
-    "\n",
-    "ax.margins(x=0)\n",
-    "ax.set_xlabel('time [s]')\n",
-    "ax.set_ylabel('firing rate [Hz]')\n",
-    "ax.legend(title='bin size [s]')\n",
-    "ax.set_xlim(xlims)\n",
-    "ax.set_title(f'unit {unit} | filter sigma {filter_sigma} s')\n",
-    "\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# visualize different bin sizes\n",
-    "filter_sigma, unit = .1, 1\n",
-    "bin_sizes = [.5, .1, .05]\n",
-    "fig, ax = plt.subplots(figsize=(20, 5))\n",
-    "\n",
-    "# # trial start times\n",
-    "# for t0 in rec.df_trl.loc[:, 'T_0']:\n",
-    "#     ax.axvline(t0, c='gray', lw=.5)\n",
-    "\n",
-    "# plot different bin sizes\n",
-    "for bin_size in bin_sizes:\n",
-    "    p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
-    "    df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
-    "    df = utl.smooth_psth(df, filter_sigma, bin_size)\n",
-    "\n",
-    "    d = df.groupby('unit').get_group(unit)\n",
-    "\n",
-    "    x = d.loc[:, 'bins_'].values * bin_size\n",
-    "    y = d.loc[:, 'fr'].values\n",
-    "\n",
-    "    ax.plot(x, y, label=f'{bin_size}')\n",
-    "\n",
-    "ax.margins(x=0)\n",
-    "ax.set_xlabel('time [s]')\n",
-    "ax.set_ylabel('firing rate [Hz]')\n",
-    "ax.legend(title='bin size [s]')\n",
-    "ax.set_xlim(xlims)\n",
-    "ax.set_title(f'unit {unit} | filter sigma {filter_sigma} s')\n",
-    "\n",
-    "fig.tight_layout()"
+    "# save for later\n",
+    "rec.units = u\n",
+    "rec.trials = t"
    ]
   },
   {
@@ -272,9 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rate distribution of train and test set\n",
-    "X, Y = utl.get_xy(rec, bin_size=.1, filter_sigma=.0001)\n",
-    "utl.plot_rate_dist(X, Y)"
+    "# load train and test set (mean pre-cue firing rate gets subtracted)\n",
+    "X, Y = utl.get_xy(rec, bin_size=.1)"
    ]
   },
   {
@@ -285,7 +140,7 @@
    "source": [
     "# ridge\n",
     "# lin_scores = utl.linear_regression(X, Y)\n",
-    "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(0, 2, 100))\n",
+    "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(4, 6, 100))\n",
     "ridge_mod = ridge_mods.best_estimator_\n",
     "utl.plot_gridsearch(ridge_mods, 'param_mod__alpha')"
    ]
@@ -319,14 +174,14 @@
     "rec1 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe2.mat')\n",
     "rec2 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe1.mat')\n",
     "\n",
-    "# select bin size and filter width \n",
-    "bin_size, filter_sigma = 0.1, .0001\n",
+    "# select bin size\n",
+    "bin_size = 0.1\n",
     "\n",
     "for rec in [rec1, rec2]:\n",
     "    \n",
     "    p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
     "    df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
-    "    df = utl.smooth_psth(df, filter_sigma, bin_size)\n",
+    "    df = utl.rate_and_time(df, bin_size)\n",
     "\n",
     "    # utl.plot_missing(df, bin_size, vmax=5)\n",
     "\n",
@@ -811,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
