--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get PSTH with defined `bin_size`, if possible load from disk\n",
+    "# get binned spikes defined `bin_size`, if possible load from disk\n",
     "p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
     "df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
     "df = utl.rate_and_time(df, bin_size)"
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load train and test set (mean pre-cue firing rate gets subtracted)\n",
+    "# generate features and targets (mean pre-cue firing rate gets subtracted)\n",
     "X, Y = utl.get_xy(rec, bin_size=.1)"
    ]
   },
@@ -171,41 +171,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load\n",
     "rec1 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe2.mat')\n",
     "rec2 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe1.mat')\n",
     "\n",
-    "# select bin size\n",
-    "bin_size = 0.1\n",
-    "\n",
+    "# process\n",
     "for rec in [rec1, rec2]:\n",
-    "    \n",
+    "\n",
+    "    # bin spikes\n",
     "    p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
     "    df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
     "    df = utl.rate_and_time(df, bin_size)\n",
     "\n",
-    "    # utl.plot_missing(df, bin_size, vmax=5)\n",
+    "    # filter units/trials\n",
+    "    unts_rate = utl.filter_rates(df, thresh_rate)\n",
+    "    unts_sw = utl.filter_spike_width(rec.df_unt, thresh_sw)\n",
     "\n",
-    "    # filter based on trials ranges\n",
-    "    unts_range, trls_range = utl.filter_trial_ranges(rec, thresh=.9, plot=True)\n",
+    "    m = rec.df_unt.loc[:, 'unit'].isin(unts_rate & unts_sw)\n",
+    "    unts_range, trls_range = utl.filter_trials(rec.df_unt.loc[m], thresh=thresh_trials, plot=False)\n",
     "\n",
-    "    # plot binned spike rates\n",
-    "    m = df.loc[:, 'unit'].isin(unts_range) & df.loc[:, 'trial'].isin(trls_range)\n",
-    "    # utl.plot_missing(df.loc[ m ], bin_size, vmax=5)\n",
+    "    rec.units = unts_rate & unts_sw & unts_range\n",
+    "    rec.trials = trls_range\n",
     "\n",
-    "    unts_rate = utl.filter_rates(df.loc[ m ], 2, plot=True)\n",
-    "\n",
-    "    rec.units = unts_rate\n",
-    "    rec.trials = trls_range"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, Y = utl.get_xy(rec1, rec2=rec2, bin_size=bin_size, filter_sigma=filter_sigma)\n",
-    "utl.plot_rate_dist(X, Y)"
+    "# features and targets \n",
+    "X, Y = utl.get_xy(rec1, rec2=rec2, bin_size=bin_size)"
    ]
   },
   {
@@ -248,48 +237,28 @@
    "source": [
     "# imec0: STR\n",
     "rec2 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_JRC_units.mat')\n",
-    "rec1 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# select bin size and filter width \n",
-    "bin_size, filter_sigma = 0.1, 1\n",
+    "rec1 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat')\n",
     "\n",
+    "# process\n",
     "for rec in [rec1, rec2]:\n",
-    "    \n",
-    "    # calculate psth with bin, filter, avg trial times\n",
+    "\n",
+    "    # bin spikes\n",
     "    p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
     "    df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
-    "    df = utl.smooth_psth(df, filter_sigma, bin_size)\n",
+    "    df = utl.rate_and_time(df, bin_size)\n",
     "\n",
-    "    # utl.plot_missing(df, bin_size, vmax=5)\n",
+    "    # filter units/trials\n",
+    "    unts_rate = utl.filter_rates(df, thresh_rate)\n",
+    "    unts_sw = utl.filter_spike_width(rec.df_unt, thresh_sw)\n",
     "\n",
-    "    # filter based on trials ranges\n",
-    "    unts_range, trls_range = utl.filter_trial_ranges(rec, thresh=.9, plot=True)\n",
+    "    m = rec.df_unt.loc[:, 'unit'].isin(unts_rate & unts_sw)\n",
+    "    unts_range, trls_range = utl.filter_trials(rec.df_unt.loc[m], thresh=thresh_trials, plot=False)\n",
     "\n",
-    "    # plot binned spike rates\n",
-    "    m = df.loc[:, 'unit'].isin(unts_range) & df.loc[:, 'trial'].isin(trls_range)\n",
-    "    # utl.plot_missing(df.loc[ m ], bin_size, vmax=5)\n",
+    "    rec.units = unts_rate & unts_sw & unts_range\n",
+    "    rec.trials = trls_range\n",
     "\n",
-    "    unts_rate = utl.filter_rates(df.loc[ m ], 2, plot=True)\n",
-    "\n",
-    "    rec.units = unts_rate\n",
-    "    rec.trials = trls_range\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, Y = utl.get_xy(rec1, rec2=rec2, bin_size=bin_size, filter_sigma=filter_sigma)\n",
-    "utl.plot_rate_dist(X, Y)"
+    "# features and targets \n",
+    "X, Y = utl.get_xy(rec1, rec2=rec2, bin_size=bin_size)"
    ]
   },
   {
@@ -334,38 +303,26 @@
     "rec2 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_JRC_units.mat')\n",
     "rec1 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_imec0_JRC_units.mat')\n",
     "\n",
-    "# select bin size and filter width \n",
-    "bin_size, filter_sigma = 0.1, 1\n",
-    "\n",
+    "# process\n",
     "for rec in [rec1, rec2]:\n",
-    "    \n",
+    "\n",
+    "    # bin spikes\n",
     "    p_prq = rec._path_name(f'bin{bin_size}.parquet')\n",
     "    df = rec._assign_df(p_prq, rec._calculate_psth, {'bin_size': bin_size})\n",
-    "    df = utl.smooth_psth(df, filter_sigma, bin_size)\n",
+    "    df = utl.rate_and_time(df, bin_size)\n",
     "\n",
-    "    # utl.plot_missing(df, bin_size, vmax=5)\n",
+    "    # filter units/trials\n",
+    "    unts_rate = utl.filter_rates(df, thresh_rate)\n",
+    "    unts_sw = utl.filter_spike_width(rec.df_unt, thresh_sw)\n",
     "\n",
-    "    # filter based on trials ranges\n",
-    "    unts_range, trls_range = utl.filter_trial_ranges(rec, thresh=.9, plot=True)\n",
+    "    m = rec.df_unt.loc[:, 'unit'].isin(unts_rate & unts_sw)\n",
+    "    unts_range, trls_range = utl.filter_trials(rec.df_unt.loc[m], thresh=thresh_trials, plot=False)\n",
     "\n",
-    "    # plot binned spike rates\n",
-    "    m = df.loc[:, 'unit'].isin(unts_range) & df.loc[:, 'trial'].isin(trls_range)\n",
-    "    # utl.plot_missing(df.loc[ m ], bin_size, vmax=5)\n",
+    "    rec.units = unts_rate & unts_sw & unts_range\n",
+    "    rec.trials = trls_range\n",
     "\n",
-    "    unts_rate = utl.filter_rates(df.loc[ m ], 2, plot=True)\n",
-    "\n",
-    "    rec.units = unts_rate\n",
-    "    rec.trials = trls_range"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, Y = utl.get_xy(rec1, rec2=rec2, bin_size=bin_size, filter_sigma=filter_sigma)\n",
-    "utl.plot_rate_dist(X, Y)"
+    "# features and targets \n",
+    "X, Y = utl.get_xy(rec1, rec2=rec2, bin_size=bin_size)"
    ]
   },
   {
@@ -407,6 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO\n",
     "p_mats = Path('./data/zidan/').glob('**/*.mat')\n",
     "\n",
     "bin_size = 0.1\n",
