--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -138,11 +138,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# linear regression (= ridge with alpha=0)\n",
+    "lin_mods = utl.ridge_regression(X, Y, alphas=[0])\n",
+    "lin_mod = lin_mods.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ridge\n",
-    "# lin_scores = utl.linear_regression(X, Y)\n",
     "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(4, 6, 100))\n",
     "ridge_mod = ridge_mods.best_estimator_\n",
-    "utl.plot_gridsearch(ridge_mods, 'param_mod__alpha')"
+    "utl.plot_gridsearch(ridge_mods, 'ridge', other_mods={'linear': lin_mods}, logscale=True)"
    ]
   },
   {
@@ -154,7 +164,7 @@
     "# RRR\n",
     "rr_mods = utl.reduced_rank_regression(X, Y, Y.shape[1])\n",
     "rr_mod = rr_mods.best_estimator_\n",
-    "utl.plot_gridsearch(rr_mods, 'param_mod__r', logscale=False)"
+    "utl.plot_gridsearch(rr_mods, 'reduced rank', other_mods={'ridge': ridge_mods}, logscale=False)"
    ]
   },
   {
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
