alll vs one and psth

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -129,7 +129,9 @@
    "outputs": [],
    "source": [
     "# generate features and targets (mean pre-cue firing rate gets subtracted)\n",
-    "X, Y = utl.get_xy(rec, bin_size=.1)"
+    "dfx, dfy = utl.select_data(rec, bin_size=.1)\n",
+    "dfx_mat, dfy_mat = utl.get_matrix(dfx), utl.get_matrix(dfy)\n",
+    "X, Y = dfx_mat.values, dfy_mat.values"
    ]
   },
   {
@@ -155,6 +157,38 @@
     "rr_mods = utl.reduced_rank_regression(X, Y, Y.shape[1])\n",
     "rr_mod = rr_mods.best_estimator_\n",
     "utl.plot_gridsearch(rr_mods, 'param_mod__r', logscale=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PSTH and all vs one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## all vs one\n",
+    "\n",
+    "# get scores for best alpha\n",
+    "ridge_scores = {}\n",
+    "alpha = ridge_mod.get_params()['mod__alpha']\n",
+    "\n",
+    "for y, u in zip(Y.T, dfy_mat.columns):\n",
+    "    mods = utl.ridge_regression(X, y, alphas=[alpha])\n",
+    "    mod = mods.best_estimator_\n",
+    "    ridge_scores[u] = mod.score(X, y)\n",
+    "\n",
+    "# prediction\n",
+    "Y_pred = ridge_mod.predict(X)\n",
+    "dfy_pred = utl.matrix2df(Y_pred, dfy)\n",
+    "\n",
+    "# plot true and predicted with score\n",
+    "utl.plot_psth(dfy, bin_size, df2=dfy_pred, scores=ridge_scores)"
    ]
   },
   {
