--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -20,12 +20,11 @@
     "import numpy as np\n",
     "\n",
     "import pandas as pd\n",
-    "# from helpers_notebook import show_full_df\n",
     "\n",
     "# global settings\n",
     "bin_size = 0.1\n",
-    "thresh_rate = 1 # firing rate in Hz\n",
-    "thresh_sw = 0.5 # spike width in ms\n",
+    "thresh_rate = 1     # firing rate in Hz\n",
+    "thresh_sw = 0.5     # spike width in ms\n",
     "thresh_trials = 0.9 # number of trials in %"
    ]
   },
@@ -140,15 +139,8 @@
    "source": [
     "# linear regression (= ridge with alpha=0)\n",
     "lin_mods = utl.ridge_regression(X, Y, alphas=[0])\n",
-    "lin_mod = lin_mods.best_estimator_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "lin_mod = lin_mods.best_estimator_\n",
+    "\n",
     "# ridge\n",
     "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(4, 6, 100))\n",
     "ridge_mod = ridge_mods.best_estimator_\n",
@@ -177,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,11 +205,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# linear regression (= ridge with alpha=0)\n",
+    "lin_mods = utl.ridge_regression(X, Y, alphas=[0])\n",
+    "lin_mod = lin_mods.best_estimator_\n",
+    "\n",
     "# ridge\n",
-    "# lin_scores = utl.linear_regression(X, Y)\n",
-    "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(-4, 4, 100))\n",
+    "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(4, 6, 100))\n",
     "ridge_mod = ridge_mods.best_estimator_\n",
-    "utl.plot_gridsearch(ridge_mods, 'param_mod__alpha')"
+    "utl.plot_gridsearch(ridge_mods, 'ridge', other_mods={'linear': lin_mods}, logscale=True)"
    ]
   },
   {
@@ -229,7 +224,7 @@
     "# RRR\n",
     "rr_mods = utl.reduced_rank_regression(X, Y, Y.shape[1])\n",
     "rr_mod = rr_mods.best_estimator_\n",
-    "utl.plot_gridsearch(rr_mods, 'param_mod__r', logscale=False)"
+    "utl.plot_gridsearch(rr_mods, 'reduced rank', other_mods={'ridge': ridge_mods}, logscale=False)"
    ]
   },
   {
@@ -277,11 +272,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# linear regression (= ridge with alpha=0)\n",
+    "lin_mods = utl.ridge_regression(X, Y, alphas=[0])\n",
+    "lin_mod = lin_mods.best_estimator_\n",
+    "\n",
     "# ridge\n",
-    "# lin_scores = utl.linear_regression(X, Y)\n",
-    "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(-3, 3, 100))\n",
+    "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(4, 6, 100))\n",
     "ridge_mod = ridge_mods.best_estimator_\n",
-    "utl.plot_gridsearch(ridge_mods, 'param_mod__alpha')"
+    "utl.plot_gridsearch(ridge_mods, 'ridge', other_mods={'linear': lin_mods}, logscale=True)"
    ]
   },
   {
@@ -293,7 +291,7 @@
     "# RRR\n",
     "rr_mods = utl.reduced_rank_regression(X, Y, Y.shape[1])\n",
     "rr_mod = rr_mods.best_estimator_\n",
-    "utl.plot_gridsearch(rr_mods, 'param_mod__r', logscale=False)"
+    "utl.plot_gridsearch(rr_mods, 'reduced rank', other_mods={'ridge': ridge_mods}, logscale=False)"
    ]
   },
   {
@@ -341,11 +339,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# linear regression (= ridge with alpha=0)\n",
+    "lin_mods = utl.ridge_regression(X, Y, alphas=[0])\n",
+    "lin_mod = lin_mods.best_estimator_\n",
+    "\n",
     "# ridge\n",
-    "# lin_scores = utl.linear_regression(X, Y)\n",
-    "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(-4, 4, 100))\n",
+    "ridge_mods = utl.ridge_regression(X, Y, alphas=np.logspace(4, 6, 100))\n",
     "ridge_mod = ridge_mods.best_estimator_\n",
-    "utl.plot_gridsearch(ridge_mods, 'param_mod__alpha')"
+    "utl.plot_gridsearch(ridge_mods, 'ridge', other_mods={'linear': lin_mods}, logscale=True)"
    ]
   },
   {
@@ -357,7 +358,7 @@
     "# RRR\n",
     "rr_mods = utl.reduced_rank_regression(X, Y, Y.shape[1])\n",
     "rr_mod = rr_mods.best_estimator_\n",
-    "utl.plot_gridsearch(rr_mods, 'param_mod__r', logscale=False)"
+    "utl.plot_gridsearch(rr_mods, 'reduced rank', other_mods={'ridge': ridge_mods}, logscale=False)"
    ]
   },
   {
