cleaned up notebook

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -17,6 +17,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "sns.set_style(\"whitegrid\")\n",
     "import numpy as np\n",
     "\n",
     "import pandas as pd\n",
@@ -28,6 +29,7 @@
     "    'thresh_sw'     : 0.5,   # max spike width in ms\n",
     "    'thresh_trials' : 0.9,   # number of trials to keep in %\n",
     "    'scoring'       : 'r2',  # see https://scikit-learn.org/stable/modules/model_evaluation.html\n",
+    "    'signal'        : 'fr',\n",
     "}"
    ]
   },
@@ -40,10 +42,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## within ALM"
+    "## select units: single region"
    ]
   },
   {
@@ -60,133 +63,14 @@
     "\n",
     "# features and targets \n",
     "dfx, dfy = utl.select_data(rec)\n",
-    "X, Y, basis_time = utl.get_matrices(dfx, dfy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot example unit\n",
-    "unit = 1\n",
-    "utl.plot_unit(rec, params['bin_size'], unit=unit) # whole session\n",
-    "\n",
-    "xlims = (1000, 1100) # zoomed in\n",
-    "utl.plot_unit(rec, params['bin_size'], unit=unit, xlims=xlims)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# linear regression (= ridge with alpha=0)\n",
-    "lin_mods = utl.ridge_regression(X, Y, scoring=params['scoring'], alphas=[0])\n",
-    "lin_mod = lin_mods.best_estimator_\n",
-    "\n",
-    "# ridge\n",
-    "ridge_mods = utl.ridge_regression(X, Y, scoring=params['scoring'], alphas=np.logspace(-13, 13, 27))\n",
-    "ridge_mod = ridge_mods.best_estimator_\n",
-    "utl.plot_gridsearch(ridge_mods, 'ridge', other_mods={'linear': lin_mods}, logscale=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RRR\n",
-    "rr_mods = utl.reduced_rank_regression(X, Y, Y.shape[1], scoring=params['scoring'])\n",
-    "rr_mod = rr_mods.best_estimator_\n",
-    "utl.plot_gridsearch(rr_mods, 'reduced rank', other_mods={'linear': lin_mods, 'ridge': ridge_mods}, logscale=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot\n",
-    "dfy_pred, scores = utl.get_ypred(X, Y, dfx, dfy, basis_time, ridge_mod, scoring=params['scoring'])\n",
-    "utl.plot_mean_response(dfy, params['bin_size'], dfy_pred, scores)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ALM-ALM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load\n",
-    "rec1 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe2.mat')\n",
-    "rec2 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe1.mat')\n",
-    "\n",
-    "# preprocess\n",
-    "utl.preproc_rec(rec1, params)\n",
-    "utl.preproc_rec(rec2, params)\n",
-    "\n",
-    "# features and targets \n",
-    "dfx, dfy = utl.select_data(rec1, rec2=rec2)\n",
-    "X, Y, basis_time = utl.get_matrices(dfx, dfy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# linear regression (= ridge with alpha=0)\n",
-    "lin_mods = utl.ridge_regression(X, Y, scoring=params['scoring'], alphas=[0])\n",
-    "lin_mod = lin_mods.best_estimator_\n",
-    "\n",
-    "# ridge\n",
-    "ridge_mods = utl.ridge_regression(X, Y, scoring=params['scoring'], alphas=np.logspace(-13, 13, 27))\n",
-    "ridge_mod = ridge_mods.best_estimator_\n",
-    "utl.plot_gridsearch(ridge_mods, 'ridge', other_mods={'linear': lin_mods}, logscale=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RRR\n",
-    "rr_mods = utl.reduced_rank_regression(X, Y, Y.shape[1], scoring=params['scoring'])\n",
-    "rr_mod = rr_mods.best_estimator_\n",
-    "utl.plot_gridsearch(rr_mods, 'reduced rank', other_mods={'linear': lin_mods, 'ridge': ridge_mods}, logscale=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot\n",
-    "dfy_pred, scores = utl.get_ypred(X, Y, dfx, dfy, basis_time, ridge_mod, scoring=params['scoring'])\n",
-    "utl.plot_mean_response(dfy, params['bin_size'], dfy_pred, scores)"
+    "X, Y, basis_time = utl.get_matrices(dfx, dfy, params['signal'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ALM-STR"
+    "## select units: two regions"
    ]
   },
   {
@@ -195,9 +79,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imec0: STR\n",
+    "# # ALM-ALM\n",
+    "# rec1 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe2.mat')\n",
+    "# rec2 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe1.mat')\n",
+    "\n",
+    "# ALM-Str (imec0: STR)\n",
     "rec2 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_JRC_units.mat')\n",
-    "rec1 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat')\n",
+    "rec1 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat', force_overwrite=True)\n",
+    "\n",
+    "# # ALM-Thal (imec0: Thal)\n",
+    "# rec2 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_JRC_units.mat')\n",
+    "# rec1 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_imec0_JRC_units.mat')\n",
     "\n",
     "# preprocess\n",
     "utl.preproc_rec(rec1, params)\n",
@@ -205,7 +97,117 @@
     "\n",
     "# features and targets \n",
     "dfx, dfy = utl.select_data(rec1, rec2=rec2)\n",
-    "X, Y, basis_time = utl.get_matrices(dfx, dfy)"
+    "X, Y, basis_time = utl.get_matrices(dfx, dfy, params['signal'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.pivot_table(data=dfx.groupby('unit').get_group(10), values='dfr', columns='bins', index='trial_')\n",
+    "sns.heatmap(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = dfx.groupby('unit').get_group(10).loc[:, 'dfr']\n",
+    "plt.sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {j: i for i, j in enumerate(dfx.loc[:, 'trial'].unique())}\n",
+    "dfx.loc[:, 'trial_'] = dfx.loc[:, 'trial'].map(d)\n",
+    "dfx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_piv1 = pd.pivot_table(dfx, values='dfr', index='T', columns='unit')\n",
+    "df_piv2 = pd.pivot_table(dfy, values='dfr', index='T', columns='unit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_piv1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig, ax = plt.subplots(figsize=(25, 4))\n",
+    "y = X[:, 1]\n",
+    "x = np.arange(len(y))\n",
+    "ax.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(15, 7))\n",
+    "sns.heatmap(ax=ax, data=X.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = rec1.df_spk.groupby('unit').get_group((10))\n",
+    "t = x.loc[:, 't'].values\n",
+    "trl = x.loc[:, 'trial'].values\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15, 7))\n",
+    "for i, j in enumerate(np.unique(trl)):\n",
+    "    ax.eventplot(t[trl == j], lineoffsets=i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = rec2.df_spk.groupby('unit').get_group((31))\n",
+    "t = x.loc[:, 't'].values\n",
+    "trl = x.loc[:, 'trial'].values\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15, 7))\n",
+    "for i, j in enumerate(np.unique(trl)):\n",
+    "    ax.eventplot(t[trl == j], lineoffsets=i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## regression"
    ]
   },
   {
@@ -244,72 +246,7 @@
    "source": [
     "# plot\n",
     "dfy_pred, scores = utl.get_ypred(X, Y, dfx, dfy, basis_time, ridge_mod, scoring=params['scoring'])\n",
-    "utl.plot_mean_response(dfy, params['bin_size'], dfy_pred, scores)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ALM-Thal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imec0: Thal\n",
-    "rec2 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_JRC_units.mat')\n",
-    "rec1 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_imec0_JRC_units.mat')\n",
-    "\n",
-    "# bin and filter\n",
-    "utl.preproc_rec(rec1, params)\n",
-    "utl.preproc_rec(rec2, params)\n",
-    "\n",
-    "# features and targets \n",
-    "dfx, dfy = utl.select_data(rec1, rec2=rec2)\n",
-    "X, Y, basis_time = utl.get_matrices(dfx, dfy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# linear regression (= ridge with alpha=0)\n",
-    "lin_mods = utl.ridge_regression(X, Y, scoring=params['scoring'], alphas=[0])\n",
-    "lin_mod = lin_mods.best_estimator_\n",
-    "\n",
-    "# ridge\n",
-    "ridge_mods = utl.ridge_regression(X, Y, scoring=params['scoring'], alphas=np.logspace(-13, 13, 27))\n",
-    "ridge_mod = ridge_mods.best_estimator_\n",
-    "utl.plot_gridsearch(ridge_mods, 'ridge', other_mods={'linear': lin_mods}, logscale=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RRR\n",
-    "rr_mods = utl.reduced_rank_regression(X, Y, Y.shape[1], scoring=params['scoring'])\n",
-    "rr_mod = rr_mods.best_estimator_\n",
-    "utl.plot_gridsearch(rr_mods, 'reduced rank', other_mods={'ridge': ridge_mods}, logscale=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot\n",
-    "dfy_pred, scores = utl.get_ypred(X, Y, dfx, dfy, basis_time, ridge_mod, scoring=params['scoring'])\n",
-    "utl.plot_mean_response(dfy, params['bin_size'], dfy_pred, scores)"
+    "utl.plot_mean_response(dfy, params['bin_size'], params['signal'], dfy_pred, scores)"
    ]
   },
   {
@@ -357,15 +294,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name2region[p_mat1.name]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -396,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +337,7 @@
     "    pd.Series(params).to_json(p_out / 'params.json')\n",
     "\n",
     "    # features and targets\n",
-    "    X, Y, basis_time = utl.get_matrices(dfx, dfy)\n",
+    "    X, Y, basis_time = utl.get_matrices(dfx, dfy, params['signal'])\n",
     "\n",
     "    # linear regression (= ridge with alpha=0)\n",
     "    lin_mods = utl.ridge_regression(X, Y, scoring=params['scoring'], alphas=[0])\n",
@@ -432,11 +360,28 @@
     "\n",
     "    # prediction\n",
     "    dfy_pred, scores = utl.get_ypred(X, Y, dfx, dfy, basis_time, ridge_mod, scoring=params['scoring'])\n",
-    "    utl.plot_mean_response(dfy, params['bin_size'], dfy_pred, scores, path=p_out / 'pred_ridge.png')\n",
-    "    pd.Series(scores, name=params['scoring']).to_csv(p_out / 'pred_ridge_scores.csv', index=False)\n",
+    "    utl.plot_mean_response(dfy, params['bin_size'], params['signal'], dfy_pred, scores, path=p_out / 'pred_ridge.png')\n",
+    "    pd.Series(scores, name=params['scoring']).to_csv(p_out / 'pred_ridge_scores.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# global settings\n",
+    "params = {\n",
+    "    'bin_size'      : 0.2,   # bin size in s\n",
+    "    'thresh_rate'   : 1,     # min firing rate in Hz\n",
+    "    'thresh_sw'     : 0.5,   # max spike width in ms\n",
+    "    'thresh_trials' : 0.9,   # number of trials to keep in %\n",
+    "    'scoring'       : 'r2',  # see https://scikit-learn.org/stable/modules/model_evaluation.html\n",
+    "    'signal'        : 'fr',\n",
+    "}\n",
     "\n",
+    "name = 'all_depths_raw_0.2'\n",
     "\n",
-    "name = 'all_depths'\n",
     "for p_dir in p_dirs:\n",
     "\n",
     "    print(p_dir)\n",
@@ -469,8 +414,14 @@
     "    dfx, dfy = utl.select_data(rec2)\n",
     "    p_out = p_dir / f'{name}/{reg2}'\n",
     "    proc_wrapper(p_out, params, dfx, dfy)\n",
-    "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## plot"
    ]
   },
   {
@@ -479,22 +430,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs = []\n",
-    "for p_csv in p_root.glob('**/pred_ridge_scores.csv'):\n",
+    "def load_scores(ps_csv):\n",
     "\n",
-    "    folder = p_csv.parent.name\n",
-    "    df = pd.read_csv(p_csv)\n",
+    "    dfs = []\n",
+    "    for p_csv in ps_csv:\n",
+    "\n",
+    "        folder = p_csv.parent.name\n",
+    "        rec = p_csv.parent.parent.parent.name\n",
+    "        pro = p_csv.parent.parent.parent.parent.name\n",
+    "        ani = rec.split('_')[0]\n",
+    "        df = pd.read_csv(p_csv)\n",
     "\n",
     "\n",
-    "    dfs.append(pd.DataFrame(data={\n",
-    "        'unit': df.index,\n",
-    "        'score': df.iloc[:, 0],\n",
-    "        'region': folder.replace(folder.split('_')[0] + '_', ''),\n",
-    "    })\n",
-    "    )\n",
-    "df = pd.concat(dfs, ignore_index=True)\n",
+    "        dfs.append(pd.DataFrame(data={\n",
+    "            'unit': df.index,\n",
+    "            'score': df.iloc[:, 0],\n",
+    "            'region': folder.replace(folder.split('_')[0] + '_', ''),\n",
+    "            'interaction': folder,\n",
+    "            'recording': rec,\n",
+    "            'animal': ani,\n",
+    "            'probes': pro,\n",
+    "        })\n",
+    "        )\n",
+    "    df = pd.concat(dfs, ignore_index=True)\n",
+    "    df.loc[:, 'interaction_'] = df.loc[:, 'interaction'].map(lambda x: x.replace('ALM1', 'ALM').replace('ALM2', 'ALM'))\n",
     "\n",
-    "sns.stripplot(df, x='region', y='score')"
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in Path(r'X:\\Users\\Zidan\\DataForNico\\ALM_ALM\\MK22_20230301').glob('all_depths*/'):\n",
+    "    print(i.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name in [ 'all_depths', 'all_depths_0.2', 'all_depths_0.5', 'all_depths_raw', 'all_depths_raw_0.2', 'all_depths_raw_0.5' ]:\n",
+    "    p_plot = p_root / 'plots/'\n",
+    "    p_plot.mkdir(exist_ok=True)\n",
+    "\n",
+    "    df = load_scores(p_root.glob(f'**/{name}/**/pred_ridge_scores.csv'))\n",
+    "\n",
+    "    g = sns.catplot(df, x='interaction', y='score', col='probes', hue='recording', sharex=False, facet_kws={'ylim': (-1, 1)})\n",
+    "    g.fig.savefig(p_plot / f'scores_{name}.png')\n",
+    "    plt.close(g.fig)\n",
+    "\n",
+    "    df.loc[:, '_sort'] = df.loc[:, 'interaction_'].str.len()\n",
+    "    d = df.sort_values(by=['_sort', 'interaction_'])\n",
+    "    fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "    sns.stripplot(data=d, ax=ax, x='interaction_', y='score', hue='recording')\n",
+    "    ax.set_ylim((-1, 1))\n",
+    "    fig.savefig(p_plot / f'scores_pooled_{name}.png')\n",
+    "    plt.close(fig)"
    ]
   },
   {
