moved work in progress to different notebook

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
     "\n",
     "# ALM-Str (imec0: STR)\n",
     "rec2 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_JRC_units.mat')\n",
-    "rec1 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat', force_overwrite=True)\n",
+    "rec1 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat')\n",
     "\n",
     "# # ALM-Thal (imec0: Thal)\n",
     "# rec2 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_JRC_units.mat')\n",
@@ -98,109 +98,6 @@
     "# features and targets \n",
     "dfx, dfy = utl.select_data(rec1, rec2=rec2)\n",
     "X, Y, basis_time = utl.get_matrices(dfx, dfy, params['signal'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.pivot_table(data=dfx.groupby('unit').get_group(10), values='dfr', columns='bins', index='trial_')\n",
-    "sns.heatmap(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = dfx.groupby('unit').get_group(10).loc[:, 'dfr']\n",
-    "plt.sub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = {j: i for i, j in enumerate(dfx.loc[:, 'trial'].unique())}\n",
-    "dfx.loc[:, 'trial_'] = dfx.loc[:, 'trial'].map(d)\n",
-    "dfx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_piv1 = pd.pivot_table(dfx, values='dfr', index='T', columns='unit')\n",
-    "df_piv2 = pd.pivot_table(dfy, values='dfr', index='T', columns='unit')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_piv1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "fig, ax = plt.subplots(figsize=(25, 4))\n",
-    "y = X[:, 1]\n",
-    "x = np.arange(len(y))\n",
-    "ax.plot(x, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(15, 7))\n",
-    "sns.heatmap(ax=ax, data=X.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = rec1.df_spk.groupby('unit').get_group((10))\n",
-    "t = x.loc[:, 't'].values\n",
-    "trl = x.loc[:, 'trial'].values\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(15, 7))\n",
-    "for i, j in enumerate(np.unique(trl)):\n",
-    "    ax.eventplot(t[trl == j], lineoffsets=i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = rec2.df_spk.groupby('unit').get_group((31))\n",
-    "t = x.loc[:, 't'].values\n",
-    "trl = x.loc[:, 'trial'].values\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(15, 7))\n",
-    "for i, j in enumerate(np.unique(trl)):\n",
-    "    ax.eventplot(t[trl == j], lineoffsets=i)"
    ]
   },
   {
