some notes on trial selection

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,17 +83,18 @@
     "# rec1 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe2.mat')\n",
     "# rec2 = Recording('./data/zidan/ALM_ALM/MK22_20230301/MK22_20230301_2H2_g0_JRC_units_probe1.mat')\n",
     "\n",
-    "# ALM-Str (imec0: STR)\n",
-    "rec2 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_JRC_units.mat')\n",
-    "rec1 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat')\n",
+    "# # ALM-Str (imec0: STR)\n",
+    "# rec2 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_JRC_units.mat', calc_psth=True)\n",
+    "# rec1 = Recording('./data/zidan/ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat', calc_psth=True)\n",
     "\n",
-    "# # ALM-Thal (imec0: Thal)\n",
-    "# rec2 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_JRC_units.mat')\n",
-    "# rec1 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_imec0_JRC_units.mat')\n",
+    "# ALM-Thal (imec0: Thal)\n",
+    "rec2 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_JRC_units.mat')\n",
+    "rec1 = Recording('./data/zidan/ALM_Thal/ZY113_20220617/ZY113_20220617_NPH2_g0_imec0_JRC_units.mat')\n",
     "\n",
     "# preprocess\n",
     "utl.preproc_rec(rec1, params)\n",
     "utl.preproc_rec(rec2, params)\n",
+    "\n",
     "\n",
     "# features and targets \n",
     "dfx, dfy = utl.select_data(rec1, rec2=rec2)\n",
@@ -657,11 +658,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## only rewarded trials"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "t = rec1.df_trl.loc[ rec1.df_trl.loc[:,'response'] == 'Reward', 'trial' ]\n",
+    "m = rec1.df_prec.loc[:, 'trial'].isin(t)\n",
+    "rec1.df_prec = rec1.df_prec.loc[ m ]\n",
+    "\n",
+    "t = rec2.df_trl.loc[ rec2.df_trl.loc[:,'response'] == 'Reward', 'trial' ]\n",
+    "m = rec2.df_prec.loc[:, 'trial'].isin(t)\n",
+    "rec2.df_prec = rec2.df_prec.loc[ m ]"
+   ]
   }
  ],
  "metadata": {
