implemented epoch selection

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -30,6 +30,19 @@
     "    'thresh_trials' : 0.9,   # number of trials to keep in %\n",
     "    'scoring'       : 'r2',  # see https://scikit-learn.org/stable/modules/model_evaluation.html\n",
     "    'signal'        : 'fr',\n",
+    "}\n",
+    "\n",
+    "# define trial epochs \n",
+    "# epoch_name : (start, end, alignment)\n",
+    "#              note that this defines the half-open interval [start, end)\n",
+    "#              note that lick times may fall between bins, because bins are aligned to cue\n",
+    "epochs = {\n",
+    "    'all'       : (None, None, 'cue'), # None only works with 'cue' alignment\n",
+    "    'pre_cue'   : (-.6,  .0,   'cue'),\n",
+    "    'post_cue1' : ( .0,  .6,   'cue'),\n",
+    "    'post_cue2' : ( .6, 1.2,   'cue'),\n",
+    "    'pre_lick'  : (-.6,  .0,  'lick'),\n",
+    "    'post_lick' : ( .0,  .6,  'lick'),\n",
     "}"
    ]
   },
@@ -96,8 +109,12 @@
     "dfx_bin, dfy_bin = utl.select_data(rec1, rec2=rec2, params=params)\n",
     "\n",
     "# subtract baseline\n",
-    "dfx_bin0 = utl.subtract_baseline(dfx_bin)\n",
-    "dfy_bin0 = utl.subtract_baseline(dfy_bin)"
+    "dfx_bin0 = utl.subtract_baseline(dfx_bin, rec1.df_spk)\n",
+    "dfy_bin0 = utl.subtract_baseline(dfy_bin, rec2.df_spk)\n",
+    "\n",
+    "# # optional: filter some epoch\n",
+    "# dfx_bin0 = utl.select_epoch(dfx_bin0, epochs['all'], rec1.df_trl)\n",
+    "# dfy_bin0 = utl.select_epoch(dfy_bin0, epochs['all'], rec2.df_trl)"
    ]
   },
   {
@@ -143,7 +160,7 @@
    "source": [
     "# plot\n",
     "Y_pred, scores = utl.get_ypred(dfx_bin0, dfy_bin0, ridge_mod, scoring=params['scoring'])\n",
-    "utl.plot_mean_response(dfy_bin, Y_pred, scores)"
+    "utl.plot_mean_response(dfy_bin0, Y_pred, scores)"
    ]
   },
   {
